--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ p {
   color: white;
 }
 button {
-  background-color: #04AA6D; /* Green */
-  border: none;
+  background-color: #21262D;
+  border-color: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
+  text-decoration: #1f6feb;
   display: inline-block;
   font-size: 16px;
   border-radius: 8px;
