--- a/mafate/styles.css
+++ b/mafate/styles.css
@@ -285,6 +285,7 @@ img:hover {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
+
 /* Add this at the end of your CSS */
 
 @media only screen and (max-width: 600px) {
@@ -323,6 +324,8 @@ img:hover {
         font-family: Arial, sans-serif;
         color: #000000;
         font-weight: bold;
+        max-width: 100%;
+        max-height: 92.6625px;
     }
 
     #gapple {
